# ProgramEQ

./: .gitmodules  CMakeLists.txt  MEASUREMENT_PLAN.md  README.md  SPEC.md  TASKS.md
Source/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: ParameterSmoother.h  PultecAnalogStage.cpp  PultecAnalogStage.h  PultecHfAttenuation.cpp  PultecHfAttenuation.h  PultecHfBoost.cpp  PultecHfBoost.h  PultecHfInteraction.cpp  PultecHfInteraction.h  PultecLfBoost.cpp  PultecLfBoost.h
build_harness_check/: CMakeCache.txt  __PLUGIN_NAME__.slnx  cmake_install.cmake
build_no_harness/: CMakeCache.txt  __PLUGIN_NAME__.slnx  cmake_install.cmake
scripts/: check_atten_noeffect.ps1  check_bypass_semantics.ps1  check_fr_consistency.py  check_lf_boost_step.ps1  check_step_boundary.py  fr_analysis.py  generate_stimuli.py  quick_fr_check.py  run_harness.ps1  run_measurements.py  run_smoke.ps1
tests/cases/: README.md  case_manifest.json  eq_in_off_lf_boost_set.json  example.json  fr_pultec_hf_atten_10khz_75pct.json  fr_pultec_hf_atten_20khz_75pct.json  fr_pultec_hf_atten_5khz_75pct.json  fr_pultec_hf_boost_10khz_75pct.json  fr_pultec_hf_boost_10khz_75pct_atten_10khz_75pct.json  fr_pultec_hf_boost_12khz_75pct.json  fr_pultec_hf_boost_12khz_75pct_atten_20khz_75pct.json  fr_pultec_hf_boost_12khz_75pct_bw_broad.json  fr_pultec_hf_boost_12khz_75pct_bw_sharp.json  fr_pultec_hf_boost_16khz_75pct.json  fr_pultec_hf_boost_3khz_75pct.json  fr_pultec_hf_boost_4khz_75pct.json  fr_pultec_hf_boost_5khz_75pct.json  fr_pultec_hf_boost_5khz_75pct_bw_broad.json  fr_pultec_hf_boost_5khz_75pct_bw_sharp.json  fr_pultec_hf_boost_8khz_75pct.json  fr_pultec_hf_boost_8khz_75pct_atten_5khz_75pct.json  fr_pultec_hf_boost_8khz_75pct_bw_broad.json  fr_pultec_hf_boost_8khz_75pct_bw_sharp.json  fr_pultec_lf_atten_100hz_100pct.json  fr_pultec_lf_atten_20hz_100pct.json  fr_pultec_lf_atten_30hz_100pct.json  fr_pultec_lf_atten_60hz_100pct.json  fr_pultec_lf_boost_100hz_100pct.json  fr_pultec_lf_boost_100hz_75pct_atten_25pct.json  fr_pultec_lf_boost_100hz_75pct_atten_50pct.json  fr_pultec_lf_boost_100hz_75pct_atten_75pct.json  fr_pultec_lf_boost_20hz_100pct.json  fr_pultec_lf_boost_30hz_100pct.json  fr_pultec_lf_boost_60hz_100pct_atten_75pct.json  fr_pultec_lf_boost_60hz_75pct_atten_25pct.json  fr_pultec_lf_boost_60hz_75pct_atten_50pct.json  (+7 more)
(+83 files in other folders)
